# raytracer

./: .gitignore  CMakeLists.txt  README.md  implemented.txt  main.c  parser.c  raytracer.c  raytracer.h
bvh/: raytracer.c  raytracer.h
make/: Makefile  implemented.txt  main.c  parser.h  raytracer.c  raytracer.h
